--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </activity>
         <receiver android:name=".NotificationPublisher" />
+        <receiver android:name=".NotificationButtonBroadcast" />
     </application>
 
 </manifest>
