Add check saving and deletion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:name=".StickyEditActivity"
             android:label="@string/title_activity_sticky_edit"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,7 +34,6 @@
                 <action android:name="android.nfc.action.TAG_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT" />
                 <action android:name="android.nfc.action.TECH_DISCOVERED"/>
-               <!-- <data android:mimeType="text/plain" /> -->
             </intent-filter>
         </activity>
         <receiver android:name=".NotificationPublisher" />
